Refactored plugin to support spigot 1.12.2